--- a/.gitignore
+++ b/.gitignore
@@ -18,28 +18,7 @@ nbproject
 Thumbs.db
 
 # composer vendor dir
-/vendor/autoload.php
-/vendor/behat
-/vendor/bin
-/vendor/bower
-/vendor/cebe
-/vendor/codeception
-/vendor/composer
-/vendor/doctrine
-/vendor/ezyang
-/vendor/fzaninotto
-/vendor/guzzlehttp
-/vendor/myclabs
-/vendor/phpdocumentor
-/vendor/phpspec
-/vendor/phpunit
-/vendor/psr
-/vendor/sebastian
-/vendor/swiftmailer
-/vendor/symfony
-/vendor/webmozart
-/vendor/yiisoft
-
+# /vendor
 
 # composer itself is not needed
 composer.phar
